--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/Romanooo84/gielda.git",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /gielda.git/"
+    "build": "parcel build src/*.html --public-url /gielda/"
   },
   "repository": {
     "type": "git",
